--- a/public/styles/_footer.scss
+++ b/public/styles/_footer.scss
@@ -1,21 +1,55 @@
-
-
 .footer-container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     border-top: solid;
-    border-color: black;
-    background-color: azure;
-    padding:0px 16px;
+    background-color: #333;
+    padding: 0px 16px;
+
     .col1 {
-        display: inline-block;
+        h3 {
+            color: #fff;
+        }
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         width: 24vw;
-        height: 100%; 
+        height: 100%;
         top: 0;
-        padding-left: 20px;
         min-height: 200px;
-        li {
-            list-style: none;
+
+        ul {
+            padding: 0px;
+
+            li {
+                list-style: none;
+                color: #888;
+
+                &:hover {
+                    color: #fff;
+                }
+                a{
+                    color: #888;
+                    text-decoration: none;
+                    &:hover{
+                        color:#fff;
+                    }
+                }
+            }
+        }
+
+    }
+
+    .location-wrapper {
+        width: 100%;
+        height: 100%;
+        min-height: 400px;
+
+        .map {
+            height: 200px;
+            width: 100%;
+            // border: 1px solid green;
         }
     }
 }
