--- a/public/styles/loginForm.scss
+++ b/public/styles/loginForm.scss
@@ -13,25 +13,79 @@
          left: 50%;
          top: 50%;
          transform: translate(-50%, -50%);
-         width: 600px;
-         height: 400px;
+         width:500px;
+         height:360px;
         //  border :1px solid red;
         background-color: white;
         display:flex;
         flex-direction: column;
+        border-radius: 8px;
         justify-content: center;
           visibility: hidden;
-        form{
-            width: 80%;
-            height: 80%;
-            margin: auto;
-            display:flex;
-            flex-direction: column;
-            justify-content: center;
-            .login-title{
-
-            }
+       form{
+        width: 100%;
+        height: 100%;
+        display: block;
+        .login-title{
+            width: 100%;
+            margin:16px 45px;
+            font-size: 22px;
+            font-weight: 600;
         }
+        .show-error{
+            color:red;
+            margin-left:16px 45px;
+            margin-bottom: 8px;
+        }
+         input {
+             display: block;
+             height: 50px;
+             width: 90%;
+             margin:16px auto;
+             border: none;
+             &::placeholder {
+                 -webkit-transform: translateY(0px);
+                 transform: translateY(0px);
+                 -webkit-transition: .5s;
+                 transition: .5s;
+             }
+
+             &:hover,
+             &:focus,
+             &:active:focus {
+                 color: #ff5722;
+                 outline: none;
+                 border-bottom: 1px solid #ff5722;
+
+                 &::placeholder {
+                     color: #ff5722;
+                     position: relative;
+                     -webkit-transform: translateY(-10px);
+                     transform: translateY(-10px);
+
+                 }
+             }
+         }
+
+
+
+         .email,
+         .pwd {
+             position: relative;
+             z-index: 1;
+             border-bottom: 1px solid rgba(0, 0, 0, .1);
+             padding-left: 20px;
+             font-family: 'Open Sans', sans-serif;
+             text-transform: uppercase;
+             color: #858585;
+             font-weight: lighter;
+             -webkit-transition: .5s;
+             transition: .5s;
+         }
+       }
+           
+
+        
     }
 
     .active {
