--- a/public/styles/_category.scss
+++ b/public/styles/_category.scss
@@ -25,32 +25,39 @@
         right:0;
         width: 80%;
         .paging {
-            align-content: flex;
+            display: flex;
+            justify-content: flex-end;
             li {
+                margin: 0 1%;
                 display: inline;
                 text-align: right;
-                font-size: xx-large;
+                font-size: large;
                 position: relative;
                 right: 0;
             }
         
         }
         .product_item {
-            height: 30vh;
+            height: auto;
             width: 20%;
             border:  solid white;
             display: inline-block;
-            img {
-                height: 100%;
-                width: 100%;
-            }
+            font-size: 80%;
             &:hover {
                 border-color: red ;
             }
             a {
-                
-                height: 100vh;
-                width: 100vw;;
+                height: 100%;
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                img {
+                    height: 100%;
+                    width: 100%;
+                }
+                .product_info {
+                    
+                }
             }
         }
     }
