--- a/public/index.scss
+++ b/public/index.scss
@@ -1,3 +1,29 @@
+body {
+    background-color: #fbe8a6;
+    // .navbar {
+    //     background-color: #b4dfe5;
+    //     .navbar-brand {
+    //         color: white;
+    //     }
+    //     .navbar-collapse {
+    //         color: white;
+    //         ul {
+    //             li {
+    //                 .nav-link {
+    //                     color: white;
+    //                     .active {
+    //                         color: white !important;
+    //                     }
+    //                 }
+    //             }
+    //         }
+    //     }
+    //     color: white;
+    // }
+    .container {
+        background-color: white;
+    }
+}
 #map{
     height: 400px;
     width: 80%;
