--- a/public/styles/loginForm.scss
+++ b/public/styles/loginForm.scss
@@ -41,3 +41,17 @@
         z-index:1;
     }
 }
+
+.register-form {
+    position: relative;
+    padding: 5% 0;
+    font-size: 80%;
+    .heading-form {
+        text-align: center;
+    }
+    .register-btn {
+        position: absolute;
+        right: 0;
+        margin-bottom: 5%;
+    }
+}
