--- a/public/styles/_category.scss
+++ b/public/styles/_category.scss
@@ -1,68 +1,68 @@
-.categoryPage {
-    width: 90vw;
-    // margin: 0;
-    // border: 0;
-    display: flex;
-    .categoryList {
-        margin: 0%;
-        border: solid;
-        border-color: black;
-        background-color: rgb(158, 215, 238);
-        width: 12vw;
-        height: 100%;
-        display: inline-block;
-        ul {
-            list-style: none;
-            padding-left: 1vw;
-        }
-        h2 {
-            font-size: 28px;
-        }
-    }
-    .product_matrix {
+// .categoryPage {
+//     width: 90vw;
+//     // margin: 0;
+//     // border: 0;
+//     display: flex;
+//     .categoryList {
+//         margin: 0%;
+//         border: solid;
+//         border-color: black;
+//         background-color: rgb(158, 215, 238);
+//         width: 12vw;
+//         height: 100%;
+//         display: inline-block;
+//         ul {
+//             list-style: none;
+//             padding-left: 1vw;
+//         }
+//         h2 {
+//             font-size: 28px;
+//         }
+//     }
+//     .product_matrix {
     
-        display: inline;
-        right:0;
-        width: 80%;
-        .paging {
-            display: flex;
-            justify-content: flex-end;
-            li {
-                margin: 0 1%;
-                display: inline;
-                text-align: right;
-                font-size: large;
-                position: relative;
-                right: 0;
-            }
+//         display: inline;
+//         right:0;
+//         width: 80%;
+//         .paging {
+//             display: flex;
+//             justify-content: flex-end;
+//             li {
+//                 margin: 0 1%;
+//                 display: inline;
+//                 text-align: right;
+//                 font-size: large;
+//                 position: relative;
+//                 right: 0;
+//             }
         
-        }
-        .product_item {
-            height: auto;
-            width: 20%;
-            border:  solid white;
-            display: inline-block;
-            font-size: 80%;
-            &:hover {
-                border-color: red ;
-            }
-            a {
-                height: 100%;
-                width: 100%;
-                display: flex;
-                flex-direction: column;
-                img {
-                    height: 100%;
-                    width: 100%;
-                }
-                .product_info {
+//         }
+//         .product_item {
+//             height: auto;
+//             width: 20%;
+//             border:  solid white;
+//             display: inline-block;
+//             font-size: 80%;
+//             &:hover {
+//                 border-color: red ;
+//             }
+//             a {
+//                 height: 100%;
+//                 width: 100%;
+//                 display: flex;
+//                 flex-direction: column;
+//                 img {
+//                     height: 100%;
+//                     width: 100%;
+//                 }
+//                 .product_info {
                     
-                }
-            }
-        }
-    }
+//                 }
+//             }
+//         }
+//     }
 
-}
+// }
 
 
 
