--- a/public/styles/loginForm.css
+++ b/public/styles/loginForm.css
@@ -6,7 +6,7 @@
 
 .home-wrapper .container-fluid {
   height: auto;
-  padding: 48px !important;
+  padding: 0px 48px !important;
 }
 
 .home-wrapper .login-wrapper {
