--- a/public/styles/loginForm.scss
+++ b/public/styles/loginForm.scss
@@ -4,7 +4,7 @@
     height: 100vh;
     .container-fluid{
        height: auto;
-       padding: 48px !important;
+       padding: 0px 48px !important;
        
     }
     .login-wrapper {
