--- a/public/index.css
+++ b/public/index.css
@@ -1,6 +1,6 @@
 @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
 #map {
-  height: 200px;
+  height: 400px;
   width: 100%;
 }
 
@@ -108,85 +108,6 @@ body {
   text-align: center;
 }
 
-.categoryPage {
-  width: 90vw;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.categoryPage .categoryList {
-  margin: 0%;
-  border: solid;
-  border-color: black;
-  background-color: #9ed7ee;
-  width: 12vw;
-  height: 100%;
-  display: inline-block;
-}
-
-.categoryPage .categoryList ul {
-  list-style: none;
-  padding-left: 1vw;
-}
-
-.categoryPage .categoryList h2 {
-  font-size: 28px;
-}
-
-.categoryPage .product_matrix {
-  display: inline;
-  right: 0;
-  width: 80%;
-}
-
-.categoryPage .product_matrix .paging {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-}
-
-.categoryPage .product_matrix .paging li {
-  margin: 0 1%;
-  display: inline;
-  text-align: right;
-  font-size: large;
-  position: relative;
-  right: 0;
-}
-
-.categoryPage .product_matrix .product_item {
-  height: auto;
-  width: 20%;
-  border: solid white;
-  display: inline-block;
-  font-size: 80%;
-}
-
-.categoryPage .product_matrix .product_item:hover {
-  border-color: red;
-}
-
-.categoryPage .product_matrix .product_item a {
-  height: 100%;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.categoryPage .product_matrix .product_item a img {
-  height: 100%;
-  width: 100%;
-}
-
 .footer-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -255,7 +176,7 @@ body {
 
 .home-wrapper .container-fluid {
   height: auto;
-  padding: 48px !important;
+  padding: 0px 48px !important;
 }
 
 .home-wrapper .login-wrapper {
@@ -1993,5 +1914,83 @@ body {
 .desc {
   margin: 20px 50px 50px 50px;
   font-size: 12px;
+}
+
+.categoryPage {
+  width: 90vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.categoryPage .categoryList {
+  margin: 0;
+  border: 1px solid #b9b9b9;
+  background-color: #fff;
+  width: 12vw;
+  height: 100%;
+  display: inline-block;
+}
+
+.categoryPage .categoryList ul {
+  list-style: none;
+  padding-left: 1vw;
+}
+
+.categoryPage .categoryList h2 {
+  font-size: 28px;
+}
+
+.categoryPage .product_matrix {
+  display: inline;
+  right: 0;
+  width: 80%;
+}
+
+.categoryPage .product_matrix .paging {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.categoryPage .product_matrix .paging li {
+  margin: 0 1%;
+  display: inline;
+  text-align: right;
+  font-size: large;
+  position: relative;
+  right: 0;
+}
+
+.categoryPage .product_matrix .product_item {
+  height: auto;
+  width: 20%;
+  border: solid white;
+  display: inline-block;
+  font-size: 80%;
+}
+
+.categoryPage .product_matrix .product_item:hover {
+  border-color: red;
+}
+
+.categoryPage .product_matrix .product_item a {
+  height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.categoryPage .product_matrix .product_item a img {
+  height: 100%;
+  width: 100%;
 }
 /*# sourceMappingURL=index.css.map */
