--- a/public/styles/loginForm.css
+++ b/public/styles/loginForm.css
@@ -17,7 +17,7 @@
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   width: 500px;
-  height: 360px;
+  height: 300px;
   background-color: white;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -134,6 +134,23 @@
   font-weight: lighter;
   -webkit-transition: .5s;
   transition: .5s;
+}
+
+.home-wrapper .login-wrapper .login-btn-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 50px;
+  padding: 0px 24px;
+}
+
+.home-wrapper .login-wrapper .login-btn-group .login {
+  width: 50%;
+}
+
+.home-wrapper .login-wrapper .login-btn-group .register {
+  width: 50%;
 }
 
 .home-wrapper .active {
