--- a/public/styles/loginForm.scss
+++ b/public/styles/loginForm.scss
@@ -14,7 +14,7 @@
          top: 50%;
          transform: translate(-50%, -50%);
          width:500px;
-         height:360px;
+         height:300px;
         //  border :1px solid red;
         background-color: white;
         display:flex;
@@ -83,7 +83,19 @@
              transition: .5s;
          }
        }
-           
+        .login-btn-group{
+            display: flex;
+            width: 100%;
+            height: 50px;
+            padding: 0px 24px;
+            .login{
+                width: 50%;
+
+            }
+            .register{
+                width: 50%;
+            }
+        }
 
         
     }
