--- a/public/styles/address.scss
+++ b/public/styles/address.scss
@@ -35,14 +35,15 @@
 }
 
 .manage-address {
+    position: relative;
     margin-top: 4vh;
     margin-bottom: 4vh;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     .edit-btn {
         position: absolute;
-        top: 4%;
-        right: 20%;
+        top: 0;
+        right: 5%;
         margin-top: 2px;
         padding: 0;
         width: 4vh;
